<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fragment"
            type="project.wgtech.openastrospace.base.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_app"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorWhite"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:menu="@menu/menu_main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:tabTextColor="@color/colorWhite"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabIndicatorHeight="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_astro"
                android:text="@string/menu_astro"
                android:background="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_nature"
                android:text="@string/menu_nature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_city"
                android:text="@string/menu_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_etc"
                android:text="@string/menu_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.tabs.TabLayout>

<!--        <fragment-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constrainedHeight="true"-->
<!--            app:layout_constraintBottom_toTopOf="@id/tabLayout_main"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/toolbar_app" />-->

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tabLayout_main" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>